--- a/About/About.css
+++ b/About/About.css
@@ -1,7 +1,74 @@
-body{background-color:#8784db;}
-h1{color:blue;}
-#header{width:100%;border: 2px dashed aqua;background-color:#ccffff;}
-.description{width:100%;border: 2px dashed aqua;background-color:#ccffff;}
-.body{width:80%;border:2px dashed blue;background-color:#8784db;font-size:24px;color:blue;margin-left:10%;margin-bottom:3%;}
-footer{width:100%;border:2px dashed aqua;background-color:#ccffff;font-size:24px;color:blue;text-align:center;}
-#text{background-color:#8784db;width:80%;border:2px dashed blue;margin-left:10%;}
+.container{
+  background-color: #d7d7f4;
+  text-align: center;
+  padding-right: 30px;
+  border-radius: 5px;  
+  width: 80%;
+  height: 60%;
+  margin-top:2.5%;
+}
+
+.header{
+  text-align:center;
+  width:100%;
+  height:10%;
+  margin-top:5%;
+}
+
+.btn{
+  display:table;
+  margin:0 auto;
+  width:50%;
+  background-color:#5f5fd3;
+  height:20%;
+  font-size:36px;
+}
+
+p{
+  font-size:17px;
+}
+
+#title{
+  font-size:64px;
+}
+
+#signup{
+  margin-top:-4.5%;
+  margin-left:2.5%;
+  width:10%;
+  height:10%;
+  font-size:24px;
+  float:left;
+}
+
+#login{
+  margin-top:-4.5%;
+  margin-right:2.5%;
+  width:10%;
+  height:10%;
+  font-size:24px;
+  float:right;
+}
+
+#home{
+  margin-top:2.5%;
+  margin-bottom:2.5%;
+  width:10%;
+  height:5%;
+  font-size:24px;
+  padding-bottom:2.5%;
+}
+
+footer{
+  background-color: #d7d7f4;
+  width:80%;
+  margin-top: 2.5%;
+  height:8%;
+  margin-left:10%;
+}
+
+#text{
+  text-align:center;
+  font-size:24px;
+  padding-top:1.25%;
+}
