--- a/Login/login.css
+++ b/Login/login.css
@@ -14,15 +14,12 @@
 
 #home{
   display:block;
-  /*margin-top:2.5%;*/
+  margin-top:2.5%;
   margin:0 auto;
   background-color:#5f5fd3;
   width:10%;
-  height:8%;
+  height:5%;
   font-size:24px;
-  position: absolute;
-  right: 25px;
-  bottom: 30px;
 }
 
 #about{
@@ -32,7 +29,7 @@
   background-color:#5f5fd3;
   width:10%;
   height:5%;
-  font-size:22px;
+  font-size:24px;
 }
 
 #submit{
